View Issue Details

IDProjectCategoryView StatusLast Update
0030364Open CASCADEOCCT:Visualizationpublic2018-12-30 14:58
Reporterkgv Assigned Tosan 
PrioritynormalSeverityfeature 
Status closedResolutionfixed 
Target Version7.4.0Fixed in Version7.4.0 
Summary0030364: Visualization, TKOpenGl - allow initializing a Surface-less EGL context
DescriptionIn some cases application might prefer using a EGL context without Surface (e.g. for off-screen rendering).

Therefore, TKOpenGl should not fail (throw exception) when passing EGL_NO_SURFACE.
TagsNo tags attached.
Test case number

Activities

git

2018-11-12 15:48

administrator   ~0081058

Branch CR30364 has been created by kgv.

SHA-1: 24319e2b278c10acb86ccbc45101921bb16ece6b


Detailed log of new commits:

Author: kgv
Date: Mon Nov 12 15:46:40 2018 +0300

    0030364: Visualization, TKOpenGl - allow initializing a Surface-less EGL context

git

2018-11-12 15:50

administrator   ~0081059

Branch CR30364_730 has been created by kgv.

SHA-1: 1c5fd4f3def86ea8b0aa3ad612226ba4e492e403


Detailed log of new commits:

Author: kgv
Date: Mon Nov 12 15:46:40 2018 +0300

    0030364: Visualization, TKOpenGl - allow initializing a Surface-less EGL context

git

2018-11-20 22:41

administrator   ~0081184

Branch CR30364_730 has been updated by kgv.

SHA-1: 90778d99bbbf25e258825ad06224e6b8bac27f2b


Detailed log of new commits:

Author: kgv
Date: Tue Nov 20 22:39:39 2018 +0300

    Disabe implicit redraws within V3d_View::SetWindow() and V3d_View::MustBeResized()

git

2018-11-22 01:13

administrator   ~0081204

Branch CR30364_730 has been updated forcibly by kgv.

SHA-1: 148446f5a979d3e8bc00a4ecb82f79d5dd1bdc17

git

2018-12-04 12:51

administrator   ~0081382

Branch CR30364_730 has been updated forcibly by kgv.

SHA-1: 923917bd5578d1655de63e22f93e68217a544995

git

2018-12-05 16:58

administrator   ~0081392

Branch CR30364_730 has been updated forcibly by kgv.

SHA-1: 7a329bb51af6adb90a34aa111fa227a099775162

git

2018-12-05 17:19

administrator   ~0081393

Branch CR30364_730 has been updated forcibly by kgv.

SHA-1: a766ed82c60a7f8e410694b4b353103f4845f6f5

git

2018-12-05 17:25

administrator   ~0081394

Branch CR30364_1 has been created by kgv.

SHA-1: 2afb6cc45bd529fcdc00026280c913681ec5f938


Detailed log of new commits:

Author: kgv
Date: Mon Nov 12 15:46:40 2018 +0300

    0030364: Visualization, TKOpenGl - allow initializing a Surface-less EGL context
    
    OpenGl_Context::MakeCurrent()/OpenGl_Context::IsCurrent() have been modified to NOT fail
    in case if myWindow is EGL_NO_SURFACE (valid off-screen rendering case within EGL).
    OpenGl_GraphicDriver::InitEglContext() now finds EGL surface config in case if it has not been passed by argument.
    
    OpenGl_Window constructor now allows wrapping an off-screen rendering surface EGL_NO_SURFACE.
    However, it still creates a dummy surface eglCreatePbufferSurface() to workaround bugs in some GLES drivers (Vivante GC2000).
    
    V3d_View::SetWindow()/V3d_View::MustBeResized()/V3d_Viewer::SetViewOn() have been modified
    to avoid implicit View redraw (leading to undefined behavior/crashes in case if rendering
    should be done into default FBO defined right after V3d_View initialization).

git

2018-12-05 17:57

administrator   ~0081396

Branch CR30364_730 has been updated forcibly by kgv.

SHA-1: 8257ad80e9abc9e04f00689d45159a98a6c1f85d

git

2018-12-05 17:58

administrator   ~0081397

Branch CR30364_1 has been updated forcibly by kgv.

SHA-1: c01c167b0e9b3550ea10a983dc1deac816c7deb7

git

2018-12-05 18:01

administrator   ~0081398

Branch CR30364_730 has been updated forcibly by kgv.

SHA-1: ac7e3c5f919fb565eba740c15d6d8c93a04358e1

git

2018-12-05 18:02

administrator   ~0081399

Branch CR30364_1 has been updated forcibly by kgv.

SHA-1: 30dab9f6fad0f7d58dbcf4240b7403fcf9f4499c

kgv

2018-12-05 19:30

developer   ~0081402

Patch is ready for review.

http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30364_1-master-KGV/

git

2018-12-23 20:29

administrator   ~0081600

Branch CR30364_1 has been updated forcibly by san.

SHA-1: 39235bedc64501f212d90102730a9d144c3c9b7d

san

2018-12-23 20:29

developer   ~0081601

Branch CR30364_1 reviewed without remarks.

bugmaster

2018-12-24 10:25

administrator   ~0081602

Combination -
OCCT branch : CR30364_1 SHA - 30dab9f6fad0f7d58dbcf4240b7403fcf9f4499c
Products branch : master SHA - 4eefea36b8ea8a987b6f644ce91f592588345220
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 16352.63000000007 / 16328.149999999985 [+0.15%]
Products
Total CPU difference: 7062.220000000021 / 7069.120000000046 [-0.10%]
Windows-64-VC14:
OCCT
Total CPU difference: 17719.40625 / 17729.53125 [-0.06%]
Products
Total CPU difference: 8455.8125 / 8464.65625 [-0.10%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2018-12-30 14:58

administrator   ~0081659

Branch CR30364_1 has been deleted by inv.

SHA-1: 39235bedc64501f212d90102730a9d144c3c9b7d

git

2018-12-30 14:58

administrator   ~0081660

Branch CR30364 has been deleted by inv.

SHA-1: 24319e2b278c10acb86ccbc45101921bb16ece6b

Related Changesets

occt: master 39235bed

2018-11-12 12:46:40

kgv


Committer: san Details Diff
0030364: Visualization, TKOpenGl - allow initializing a Surface-less EGL context

OpenGl_Context::MakeCurrent()/OpenGl_Context::IsCurrent() have been modified to NOT fail
in case if myWindow is EGL_NO_SURFACE (valid off-screen rendering case within EGL).
OpenGl_GraphicDriver::InitEglContext() now finds EGL surface config in case if it has not been passed by argument.

OpenGl_Window constructor now allows wrapping an off-screen rendering surface EGL_NO_SURFACE.
However, it still creates a dummy surface eglCreatePbufferSurface() to workaround bugs in some GLES drivers (Vivante GC2000).

V3d_View::SetWindow()/V3d_View::MustBeResized()/V3d_Viewer::SetViewOn() have been modified
to avoid implicit View redraw (leading to undefined behavior/crashes in case if rendering
should be done into default FBO defined right after V3d_View initialization).
Affected Issues
0030364
mod - src/OpenGl/OpenGl_Context.cxx Diff File
mod - src/OpenGl/OpenGl_GraphicDriver.cxx Diff File
mod - src/OpenGl/OpenGl_Window.cxx Diff File
mod - src/V3d/V3d_View.cxx Diff File
mod - src/V3d/V3d_Viewer.cxx Diff File

Issue History

Date Modified Username Field Change
2018-11-12 15:46 kgv New Issue
2018-11-12 15:46 kgv Assigned To => kgv
2018-11-12 15:48 git Note Added: 0081058
2018-11-12 15:50 git Note Added: 0081059
2018-11-20 22:41 git Note Added: 0081184
2018-11-22 01:13 git Note Added: 0081204
2018-12-04 12:51 git Note Added: 0081382
2018-12-05 16:58 git Note Added: 0081392
2018-12-05 17:19 git Note Added: 0081393
2018-12-05 17:25 git Note Added: 0081394
2018-12-05 17:57 git Note Added: 0081396
2018-12-05 17:58 git Note Added: 0081397
2018-12-05 18:01 git Note Added: 0081398
2018-12-05 18:02 git Note Added: 0081399
2018-12-05 19:30 kgv Note Added: 0081402
2018-12-05 19:30 kgv Assigned To kgv => san
2018-12-05 19:30 kgv Status new => resolved
2018-12-23 20:29 git Note Added: 0081600
2018-12-23 20:29 san Note Added: 0081601
2018-12-23 20:29 san Assigned To san => bugmaster
2018-12-23 20:29 san Status resolved => reviewed
2018-12-24 10:25 bugmaster Note Added: 0081602
2018-12-24 10:32 bugmaster Status reviewed => tested
2018-12-30 14:54 san Changeset attached => occt master 39235bed
2018-12-30 14:54 san Assigned To bugmaster => san
2018-12-30 14:54 san Status tested => verified
2018-12-30 14:54 san Resolution open => fixed
2018-12-30 14:58 git Note Added: 0081659
2018-12-30 14:58 git Note Added: 0081660